<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:padding="10dp"

    tools:context=".MainActivity">
    <com.mikepenz.iconics.view.IconicsImageView
        android:id="@+id/weather_icon"
        android:layout_gravity="center"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:iiv_color="@color/colorPrimary"
        app:iiv_icon="wic-cloudy"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/depth"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_base_depth"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/temperature"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:id="@+id/text_view_temp"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/open_trails"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/text_view_trails"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_weight="1"
            android:layout_gravity="end"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp"
                android:text="@string/groomed" />

            <TextView
                android:id="@+id/text_view_groomed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="20sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/open_lifts" />

        <TextView
            android:id="@+id/text_view_lifts"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/weather" />

        <TextView
            android:id="@+id/text_weather"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/_12hr" />

        <TextView
            android:id="@+id/text_view_forecast12"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/_24hr" />

        <TextView
            android:id="@+id/text_view_forecast24"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp"
            android:text="@string/updated" />

        <TextView
            android:id="@+id/text_view_updated"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="20sp" />
    </LinearLayout>
</LinearLayout>